--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>honeysql</groupId>
+  <groupId>district0x</groupId>
   <artifactId>honeysql</artifactId>
   <version>1.0.444</version>
   <name>honeysql</name>
   <description>SQL as Clojure data structures.</description>
-  <url>https://github.com/seancorfield/honeysql</url>
+  <url>https://github.com/district0x/honeysql</url>
   <licenses>
     <license>
       <name>Eclipse Public License</name>
@@ -22,8 +22,8 @@
     </developer>
   </developers>
   <scm>
-    <url>https://github.com/seancorfield/honeysql</url>
-    <connection>scm:git:git://github.com/seancorfield/honeysql.git</connection>
+    <url>https://github.com/district0x/honeysql</url>
+    <connection>scm:git:git://github.com/district0x/honeysql.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/seancorfield/honeysql.git</developerConnection>
     <tag>v1.0.444</tag>
   </scm>
